# FinMatrix

./: .dockerignore  .env.example  .gitignore  AGENT_ARCHITECTURE.md  CLAUDE.md  Makefile  RAG.md  README.md  ROADMAP.md  docker-compose.test.yml  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-agents.txt  requirements.txt
backend/.tmp/kap_sdk_inspect/: kap_sdk-0.1.24-py3-none-any.whl  tomli-2.4.1-cp311-cp311-win_amd64.whl  websockets-10.4-cp311-cp311-win_amd64.whl
backend/alembic/: env.py
backend/alembic/versions/: 20260312_121703_bacf28dc4d1a_init_alembic_setup.py  20260312_122426_0081664ae6b6_init_setup.py  20260312_125322_afcef6abc601_add_users_and_telegram_settings_tables.py  20260312_144332_ab8422a9cd54_add_stocks_and_watchlist_tables.py  20260312_160000_c7d3e8f1a2b4_add_financial_data_tables.py  20260312_160353_95be9d884fbd_add_kap_reports_and_news_models_task_2_5.py  20260312_165905_d818c713f889_add_chat_and_document_chunk_models_task_.py  (+19 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/scripts/: __init__.py  backfill_financials.py  backfill_kap_reports.py  backfill_pdf_download_state.py  backfill_prices.py  backfill_triage.py  check_kontr_reports.py  check_reports.py  create_partitions.py  reindex_chromadb.py  run_rag_ingestion_v2.py  seed_stocks.py  sync_rag_chunks.py  sync_rag_memory.py  test_dedupe_logic.py  test_diagnostics_rag.py  test_final_idempotency.py  test_real_pdf_overlap.py
backend/tests/: __init__.py  conftest.py  factories.py
(+230 files in other folders)
