[project]
name = "finmatrix-backend"
version = "0.1.0"
description = "FinMatrix backend"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.1",
    "pdfplumber>=0.10.0",
    "docling>=2.0.0,<3.0.0",
    "nltk>=3.8.0",
    "psycopg2-binary>=2.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/prompts/*", "app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
